--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,10 @@
 # image-enhancement/img_utils.py: 1
 # image-enhancement/low-light/RetinexDIP/main.ipynb: 11
 # image-enhancement/low-light/RetinexDIP/utils/image_io.py: 8
-Pillow == 9.0.1
+Pillow
 
 # image-enhancement/low-light/RetinexDIP/utils/image_io.py: 5,6
-matplotlib == 3.5.1
+matplotlib
 
 # image-enhancement/low-light/RetinexDIP/main.ipynb: 15
 # image-enhancement/low-light/RetinexDIP/net/common.py: 3
@@ -18,19 +18,19 @@ matplotlib == 3.5.1
 # image-enhancement/low-light/RetinexDIP/net/upsampler.py: 3
 # image-enhancement/low-light/RetinexDIP/utils/image_io.py: 7
 # image-enhancement/low-light/RetinexDIP/utils/imresize.py: 1
-numpy == 1.21.2
+numpy
 
 # image-enhancement/low-light/RetinexDIP/main.ipynb: 18
 opencv_python == 4.5.5.64
 
 # image-enhancement/low-light/RetinexDIP/main.ipynb: 12
-pillow_heif == 0.1.11
+pillow_heif
 
 # image-enhancement/low-light/RetinexDIP/utils/imresize.py: 2
-scipy == 1.8.0
+scipy
 
 # image-enhancement/low-light/RetinexDIP/utils/image_io.py: 9
-sk_video == 1.1.10
+sk_video
 
 # image-enhancement/low-light/RetinexDIP/main.ipynb: 17
 # image-enhancement/low-light/RetinexDIP/net/common.py: 1,2
@@ -49,12 +49,12 @@ sk_video == 1.1.10
 # image-enhancement/low-light/RetinexDIP/utils/image_io.py: 3
 # image-enhancement/low-light/RetinexDIP/utils/sgld.py: 1,3
 # image-enhancement/low-light/RetinexDIP/utils/vggloss.py: 1,2,3
-torch == 1.11.0
+torch
 
 # image-enhancement/low-light/RetinexDIP/main.ipynb: 19
 # image-enhancement/low-light/RetinexDIP/net/percentroloss.py: 4
 # image-enhancement/low-light/RetinexDIP/utils/image_io.py: 4
-torchvision == 0.12.0
+torchvision
 
 # image-enhancement/low-light/RetinexDIP/main.ipynb: 22
-tqdm == 4.63.0
+tqdm
